<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_account">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/create_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_request" />

        <EditText
            android:id="@+id/name_input_create"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_log_in_input"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastname_request" />

        <EditText
            android:id="@+id/lastname_input_create"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_log_in_input"
            android:ems="10"
            android:hint="Lastname"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_request" />

        <EditText
            android:id="@+id/email_input_create"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_log_in_input"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass_request" />

        <EditText
            android:id="@+id/pass_input_create"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_log_in_input"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numID_request" />

        <EditText
            android:id="@+id/IDnum_input_create"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_log_in_input"
            android:ems="10"
            android:hint="ID"
            android:inputType="number"
            android:padding="12dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lat_request" />

        <EditText
            android:id="@+id/lat_input_create"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_log_in_input"
            android:ems="10"
            android:hint="Latitude"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lng_request" />

        <EditText
            android:id="@+id/lng_input_create"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_log_in_input"
            android:ems="10"
            android:hint="Longitude"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/create_btn"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_btn"
            android:onClick="onSignUpClick"
            android:text="@string/sign_up_btn"
            android:textAlignment="center"
            app:backgroundTint="@color/md_orange_500"
            app:iconTint="#FFFFFF" />

    </LinearLayout>

</ScrollView>