<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="34sp"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="24sp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/md_grey_300"
                android:textSize="24sp"
                android:padding="10dp"
                android:hint="@string/insert_your_email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/pass_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/md_grey_300"
                android:textSize="24sp"
                android:padding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:background="@drawable/login_btn"
                android:onClick="onSignInClick"
                android:text="@string/login"
                android:textAlignment="center"
                app:backgroundTint="@color/md_orange_500"
                app:iconTint="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/create_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:background="@drawable/login_btn"
                android:onClick="onCreateClick"
                android:text="@string/create_account"
                android:textAlignment="center"
                app:backgroundTint="@color/md_deep_orange_500"
                app:iconTint="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>